# Flappy-Bird-Raylib

./: .gitignore  CMakeLists.txt  README.md
Flappy Bird Web Files/: FlappyBird.js  FlappyBird.wasm  index.html
build-web/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FlappyBird.data  FlappyBird.js  FlappyBird.wasm  Makefile  cmake_install.cmake
build-web/raylib_build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-web/raylib_build/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  raylib.pc
src/: main.cpp
